--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 body{
@@ -85,7 +86,7 @@ body{
     font-size: 55px;
 }
 .work{
-    margin-top: 5px;
+    margin: 5px 0px;
     font-size: 35px;
 }
 
@@ -96,9 +97,31 @@ body{
 }
 
 .social-media a{
-    margin-right: 15px;
+    margin-right: 20px;
     color: white;
 }
+
+.my-img-div{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#first-img{
+    width: 300px;
+    height: 300px;
+    border-radius: 900px;
+}
+
+#second-img{
+    width: 300px;
+    height: 300px;
+    border-radius: 900px;
+    margin-bottom: 20px;
+    display: none;
+}
+
 
 @media only screen and (max-width:600px){
     .menu{
@@ -108,5 +131,40 @@ body{
         display: block;
         margin: 5px;
         font-size:large;
+    }
+    
+}
+
+@media only screen and (max-width:800px){
+    .main-menu{
+        flex-direction: column;
+    }
+    .info{
+        width: 100vw;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-bottom: 10vh;
+        padding-top: 45vh;
+        background-image: url('images/dp.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-right: auto;
+    }
+    .my-img-div{
+        width: 100%;
+        margin-top: 40px;
+    }
+    #second-img{
+        display: block;
+    }
+    #first-img{
+        display: none;
+    }
+    .info{
+        color: black;
+    }
+    .white-color{
+        color: black;
     }
 }
