resposive mobile design

--- a/style.css
+++ b/style.css
@@ -136,35 +136,38 @@ body{
 }
 
 @media only screen and (max-width:800px){
-    .main-menu{
-        flex-direction: column;
-    }
     .info{
         width: 100vw;
         padding-left: 30px;
         padding-right: 30px;
-        padding-bottom: 10vh;
-        padding-top: 45vh;
+        padding-bottom: 5vh;
         background-image: url('images/dp.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         margin-right: auto;
+        justify-content: end;
     }
     .my-img-div{
-        width: 100%;
-        margin-top: 40px;
-    }
-    #second-img{
-        display: block;
-    }
-    #first-img{
         display: none;
     }
     .info{
         color: black;
+        height: 100vh;
     }
     .white-color{
         color: black;
+    }
+    #nav-bar{
+        position: absolute;
+    }
+    #test{
+        background: rgba(255, 255, 255, 0.26);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(0px);
+-webkit-backdrop-filter: blur(0px);
+border: 1px solid rgba(255, 255, 255, 0.56);
+        padding: 15px;
     }
 }
