--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body{
     font-weight: bold;
     font-size: 55px;
 }
-.work{
+#work{
     margin: 5px 0px;
     font-size: 35px;
 }
@@ -130,9 +130,43 @@ body{
     #bars{
         display: block;
         margin: 5px;
-        font-size:large;
+        font-size: 30px;
+        color: white;
+    }
+    #details-info{
+        height: 50px;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        font-size: small;
+        border: .3px solid black;
+        padding: 2px 4px;
+        border-radius: 5px;
+    }
+    #my-name{
+        font-size: 40px;
+    }
+    #work{
+        font-size: 25px;
     }
     
+    #details-info::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+    
+    
+    #details-info::-webkit-scrollbar:horizontal {
+        /* height: 11px; */
+        display: none;
+    }
+    
+    #details-info::-webkit-scrollbar-thumb {
+        border-radius: 8px;
+        border: 2px solid black; 
+        background-color: rgba(0, 0, 0, .5);
+    }
+    .social-media{
+        margin-top: 5px;
+    }
 }
 
 @media only screen and (max-width:800px){
@@ -161,13 +195,15 @@ body{
     #nav-bar{
         position: absolute;
     }
-    #test{
+    #info-data{
         background: rgba(255, 255, 255, 0.26);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(0px);
--webkit-backdrop-filter: blur(0px);
-border: 1px solid rgba(255, 255, 255, 0.56);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(0px);
+        -webkit-backdrop-filter: blur(0px);
+        border: 1px solid rgba(255, 255, 255, 0.56);
         padding: 15px;
+        padding-top: 22px;
     }
+    
 }
