--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    background-color: rgb(45, 45, 59);
+    background-color:#100E17;
 }
 
 .menu ul{
@@ -111,8 +111,8 @@ body{
 }
 
 #first-img{
-    width: 300px;
-    height: 300px;
+    width: 50vh;
+    height: 50vh;
     border-radius: 900px;
 }
 
@@ -124,6 +124,57 @@ body{
     display: none;
 }
 
+#about-me{
+    display: flex;
+    color: white;
+}
+
+#about-me .img{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#about-me .img img{
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
+    /* border-radius: 900px; */
+}
+
+#about-text{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    /* align-items: center; */
+    justify-content: center;
+    padding: 20px;
+    text-align: justify;
+
+}
+
+.heading{
+    font-size: 35px;
+}
+
+.btn-primary{
+    background-color: var(--primary-color);
+    padding: 10px 20px;
+    border-radius: 40px;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    width: fit-content;
+    margin-top: 20px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn-primary:hover{
+    box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.9);
+}
 
 @media only screen and (max-width:600px){
     .menu{
@@ -139,7 +190,21 @@ body{
     #details-info{
         height: 30px;
     }
-    
+    #about-me{
+        flex-direction: column;
+    }
+    #about-me .img{
+        width: 100%;
+    }
+    #about-me .img img{
+        width: 100%;
+        height: 100%;
+    }
+    #about-text{
+        width: 100%;   
+        padding-left: 0px; 
+    }
+
 }
 
 @media only screen and (max-width:800px){
@@ -212,5 +277,13 @@ body{
     }
     #social-media{
         margin-top: 5px;
+    }
+
+    #about-me{
+        margin-top: 20px;
+    }
+
+    #about-text{
+        padding: 0 20px;
     }
 }
