--- a/Style/index.css
+++ b/Style/index.css
@@ -9,6 +9,9 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color:#100E17;
 }
@@ -17,6 +20,7 @@ body{
     display: flex;
     list-style: none;
     padding: 0;
+    /* transform: translateX(0%); */
 }
 
 .menu ul li{
@@ -37,8 +41,9 @@ body{
 
 
 #nav-bar{
-    margin-top: 5px;
+    padding: 5px;
     display: flex;
+    width: 100%;
 }
 
 #bars{
@@ -80,6 +85,11 @@ body{
     cursor: pointer;
     width: fit-content;
 }
+
+#details-info{
+    text-align: justify;
+}
+
 .info h1{
     margin-top: 10px;
     font-weight: bold;
@@ -91,6 +101,7 @@ body{
 }
 
 #social-media{
+    font-size: small;
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -111,8 +122,12 @@ body{
 }
 
 #first-img{
-    width: 50vh;
-    height: 50vh;
+    width: 400px;
+    height: 400px;
+    @media screen and (max-height: 800px) {
+        width: 50vh;
+        height: 50vh;
+    }
     border-radius: 900px;
 }
 
@@ -173,13 +188,61 @@ body{
 }
 
 .btn-primary:hover{
-    box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.9);
+    box-shadow: 2px 4px 30px rgba(255, 255, 255, 0.4);
 }
 
+.sidebar{
+    display: flex;
+    position: relative;
+}
+
+#close-btn{
+    display: none;
+}
+
+
+/* media queries */
+
 @media only screen and (max-width:600px){
-    .menu{
+
+    .menu ul{
+        display: none;
+        flex-direction: column;
+        /* justify-content: center; */
+        /* align-items: center; */
+        padding: 10px 20px;
+        position: fixed;
+        top: 0;
+        left: -70vh;
+        width: 70vw;
+        height: 100vh;
+        background-color: #000000;
+        transition: all .3s ease;
+        z-index: 1;
+        filter: opacity(.85);
+    }
+
+    .menu ul li{
+        margin: 10px 0px;
+        border-bottom: 1px solid white;
+        padding: 5px;
+    }
+    .menu ul li a{
+        font-size: 25px;
+    }
+    
+    .active{
+        left: 0 !important;
+        display: flex !important;
+        transition: all .3s ease;
+        #close-btn{
+            display: block !important;
+        }
+    }
+    .hide{
         display: none;
     }
+
     #bars{
         display: block;
         margin: 5px;
@@ -190,6 +253,7 @@ body{
     #details-info{
         height: 30px;
     }
+    
     #about-me{
         flex-direction: column;
     }
@@ -205,6 +269,13 @@ body{
         padding-left: 0px; 
     }
 
+    #first-img{
+    width: 50vh;
+    height: 50vh;
+    border-radius: 900px;
+    }
+    
+
 }
 
 @media only screen and (max-width:800px){
@@ -213,7 +284,7 @@ body{
         padding-left: 30px;
         padding-right: 30px;
         padding-bottom: 5vh;
-        background-image: url('images/dp.jpg');
+        background-image: url(/images/dp.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -286,4 +357,6 @@ body{
     #about-text{
         padding: 0 20px;
     }
+
+    
 }
