--- a/Style/index.css
+++ b/Style/index.css
@@ -16,6 +16,7 @@ body{
     background-color:#100E17;
 }
 
+
 .menu ul{
     display: flex;
     list-style: none;
@@ -200,6 +201,57 @@ body{
     display: none;
 }
 
+#work-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    color: white;
+
+}
+
+#skill-blocks{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    margin-top: 20px;
+    gap: 20px;
+    padding: 10px;
+}
+
+
+.card{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 100%;
+    height: 200px;
+    background-color: #4d4c4c;
+    align-items: center;
+    justify-content: center;
+    transition: all .4s ease;
+    border-radius: 7px;
+}
+
+.card:hover{
+    background-color: #413e3e;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+    scale: 1.03;
+}
+
+.card :first-child{
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.card :nth-child(2){
+    margin-top: 25px;
+    color: var(--primary-color);
+
+}
 
 /* media queries */
 
@@ -274,7 +326,8 @@ body{
     height: 50vh;
     border-radius: 900px;
     }
-    
+
+ 
 
 }
 
@@ -357,6 +410,8 @@ body{
     #about-text{
         padding: 0 20px;
     }
-
+    #skill-blocks{
+        grid-template-columns: 1fr;
+    }
     
 }
