--- a/Style/index.css
+++ b/Style/index.css
@@ -14,6 +14,14 @@ html {
 }
 body {
     background-color: #100e17;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+body section{
+    max-width: 2500px;
 }
 
 .menu ul {
@@ -292,25 +300,59 @@ body {
     margin-top: 10px;
 }
 
-#education-experience{
+#education-experience {
+    margin: 20px 0px;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding : 10px 30px;
+    padding: 10px 30px;
 }
 
-#education{
+#education {
     width: 100%;
-
+    padding: 0 20px;
 }
 
-#experience{
+#experience {
     width: 100%;
-    margin-left: 20px;
+    padding: 0 20px;
 }
 
+.edu-card {
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    height: 200px;
+    background-color: #4d4c4c;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+    border-radius: 7px;
+    max-width: 1000px;
+    width: 100%;
+}
+
+.card-heading {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.card-sub-heading {
+    margin-top: 10px;
+    color: var(--primary-color);
+    font-size: x-large !important;
+}
+
+.cards{
+    margin: 10px 0 15px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 /* media queries */
 
 @media only screen and (max-width: 600px) {
@@ -384,6 +426,10 @@ body {
 
     #skill-bars {
         grid-template-columns: 1fr;
+    }
+
+    .heading {
+        font-size: 30px;
     }
 }
 
@@ -468,5 +514,13 @@ body {
     }
     #skill-blocks {
         grid-template-columns: 1fr;
+    }
+    #education-experience {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        padding: 10px;
+        margin: auto;
     }
 }
