footer, heading, cv

--- a/Style/index.css
+++ b/Style/index.css
@@ -13,15 +13,17 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background-color: #100e17;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #0e0c13;
     justify-content: center;
 }
 
 body section{
+    background-color: #100e17;
     max-width: 2500px;
+    padding: 2px;
 }
 
 .menu ul {
@@ -54,6 +56,7 @@ body section{
 
 #bars {
     display: none;
+    cursor: pointer;
 }
 
 .white-color {
@@ -209,7 +212,6 @@ body section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
     color: white;
 }
 
@@ -221,7 +223,6 @@ body section{
     width: 100%;
     margin-top: 20px;
     gap: 20px;
-    padding: 10px;
 }
 
 .card {
@@ -265,7 +266,7 @@ body section{
 
 #skill-bars {
     width: 100%;
-    padding: 15px 30px;
+    padding: 15px 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 5px 20px;
@@ -307,21 +308,19 @@ body section{
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding: 10px 30px;
 }
 
 #education {
     width: 100%;
-    padding: 0 20px;
 }
 
 #experience {
     width: 100%;
-    padding: 0 20px;
+    margin-left: 10px;
 }
 
 .edu-card {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     display: flex;
     flex-direction: column;
     padding: 10px;
@@ -333,6 +332,7 @@ body section{
     border-radius: 7px;
     max-width: 1000px;
     width: 100%;
+    gap: 5px;
 }
 
 .card-heading {
@@ -353,6 +353,16 @@ body section{
     justify-content: center;
     align-items: center;
 }
+
+footer {
+    width: 100%;
+    background-color: #100e17;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
 /* media queries */
 
 @media only screen and (max-width: 600px) {
@@ -399,10 +409,6 @@ body section{
         color: white;
     }
 
-    #details-info {
-        height: 30px;
-    }
-
     #about-me {
         flex-direction: column;
     }
@@ -426,11 +432,13 @@ body section{
 
     #skill-bars {
         grid-template-columns: 1fr;
+        padding: 5px ;
     }
 
     .heading {
         font-size: 30px;
     }
+
 }
 
 @media only screen and (max-width: 800px) {
@@ -478,29 +486,12 @@ body section{
     }
 
     #details-info {
-        height: 80px;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
         font-size: small;
         border: 0.3px solid black;
         padding: 2px 4px;
         border-radius: 5px;
     }
 
-    #details-info::-webkit-scrollbar {
-        -webkit-appearance: none;
-    }
-
-    #details-info::-webkit-scrollbar:horizontal {
-        /* height: 11px; */
-        display: none;
-    }
-
-    #details-info::-webkit-scrollbar-thumb {
-        border-radius: 8px;
-        border: 2px solid black;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
     #social-media {
         margin-top: 5px;
     }
@@ -522,5 +513,8 @@ body section{
         width: 100%;
         padding: 10px;
         margin: auto;
+    }
+    #experience {
+        margin-left: 0px;
     }
 }
